objects/HealthMedical_Survey__c.object
<CustomObject>
    <description>created for Marketing cloud survey</description>
    <fields>
        <fullName>Are_you_a_twin__c</fullName>
        <description>Are you a twin?</description>
        <inlineHelpText>Are you a twin?</inlineHelpText>
        <label>HM_v1.0.42</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Are_you_color_blind__c</fullName>
        <description>Are you color blind?</description>
        <inlineHelpText>Are you color blind?</inlineHelpText>
        <label>HM_v1.0.4</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Are_you_diabetic__c</fullName>
        <description>Are you diabetic?</description>
        <inlineHelpText>Are you diabetic?</inlineHelpText>
        <label>HM_v1.0.9</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>At_what_age_you_using_tobacco_products__c</fullName>
        <description>At what age did you being using tobacco products?</description>
        <inlineHelpText>At what age did you being using tobacco products?</inlineHelpText>
        <label>HM_v1.0.49</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>HMs</relationshipLabel>
        <relationshipName>HealthMedical_Surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <description>contact for health medical survey</description>
        <label>Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Daily_dose__c</fullName>
        <description>Daily dose</description>
        <inlineHelpText>Daily dose</inlineHelpText>
        <label>HM_v1.0.56</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Did_you_smoke_in_past_but_not_currently__c</fullName>
        <description>Did you smoke cigarettes/cigars/pipes in the past but do not smoke currently?</description>
        <inlineHelpText>Did you smoke cigarettes/cigars/pipes in the past but do not smoke currently?</inlineHelpText>
        <label>HM_v1.0.50</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Do_you_currently_have_cataracts__c</fullName>
        <description>Do you currently have cataracts, or have you had cataract surgery in the past?</description>
        <inlineHelpText>Do you currently have cataracts, or have you had cataract surgery in the past?</inlineHelpText>
        <label>HM_v1.0.5</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Do_you_currently_smoke_cigarettes_cigars__c</fullName>
        <description>Do you currently smoke cigarettes/cigars/pipes?</description>
        <inlineHelpText>Do you currently smoke cigarettes/cigars/pipes?</inlineHelpText>
        <label>HM_v1.0.47</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Do_you_currently_smoke_marijuana__c</fullName>
        <description>Do you currently smoke marijuana or ingest marijuana products</description>
        <inlineHelpText>Do you currently smoke marijuana or ingest marijuana products</inlineHelpText>
        <label>HM_v1.0.52</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Do_you_drink_alcohol__c</fullName>
        <description>Do you drink alcohol?</description>
        <inlineHelpText>Do you drink alcohol?</inlineHelpText>
        <label>HM_v1.0.44</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Do_you_have_arthritis__c</fullName>
        <description>Do you have arthritis?</description>
        <inlineHelpText>Do you have arthritis?</inlineHelpText>
        <label>HM_v1.0.24</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Do_you_have_high_blood_pressure__c</fullName>
        <description>Do you have high blood pressure?</description>
        <inlineHelpText>Do you have high blood pressure?</inlineHelpText>
        <label>HM_v1.0.31</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Do_you_have_high_cholesterol__c</fullName>
        <description>Do you have high cholesterol?</description>
        <inlineHelpText>Do you have high cholesterol?</inlineHelpText>
        <label>HM_v1.0.26</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Do_you_have_insomnia_sleeping_problems__c</fullName>
        <description>Do you have insomnia, sleep apnea, or other problems sleeping?</description>
        <inlineHelpText>Do you have insomnia, sleep apnea, or other problems sleeping?</inlineHelpText>
        <label>HM_v1.0.23</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Do_you_have_problems_with_your_hearing__c</fullName>
        <description>Do you have problems with your hearing?</description>
        <inlineHelpText>Do you have problems with your hearing?</inlineHelpText>
        <label>HM_v1.0.6</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Do_you_have_problems_with_your_memory__c</fullName>
        <description>Do you have problems with your memory?</description>
        <inlineHelpText>Do you have problems with your memory?</inlineHelpText>
        <label>HM_v1.0.34</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Do_you_suffer_from_chronic_headaches__c</fullName>
        <description>Do you suffer from chronic headaches?</description>
        <inlineHelpText>Do you suffer from chronic headaches?</inlineHelpText>
        <label>HM_v1.0.18</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Do_you_wear_corrective_lenses__c</fullName>
        <description>Do you wear corrective lenses (glasses or contacts)?</description>
        <inlineHelpText>Do you wear corrective lenses (glasses or contacts)?</inlineHelpText>
        <label>HM_v1.0.3</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>email for health medical survey</description>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Had_a_medically_diagnosed_concussion__c</fullName>
        <description>Have you ever had a medically diagnosed concussion?</description>
        <inlineHelpText>Have you ever had a medically diagnosed concussion?</inlineHelpText>
        <label>HM_v1.0.14</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Have_diagnosed_with_Alzheimer_s_disease__c</fullName>
        <description>Have you been diagnosed with Alzheimer’s disease or Mild Cognitive Dementia?</description>
        <inlineHelpText>Have you been diagnosed with Alzheimer’s disease or Mild Cognitive Dementia?</inlineHelpText>
        <label>HM_v1.0.36</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Have_diagnosed_with_Parkinson_s_disease__c</fullName>
        <description>Have you been diagnosed with Parkinson’s disease?</description>
        <inlineHelpText>Have you been diagnosed with Parkinson’s disease?</inlineHelpText>
        <label>HM_v1.0.37</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Have_u_diagnose_with_learning_disability__c</fullName>
        <description>Have you been diagnosed with a learning disability or related disorder (dyslexia, attention deficit disorder)?</description>
        <inlineHelpText>Have you been diagnosed with a learning disability or related disorder (dyslexia, attention deficit disorder)?</inlineHelpText>
        <label>HM_v1.0.30</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Have_u_diagnosed_with_movement_disorder__c</fullName>
        <description>Have you been diagnosed with a movement disorder?</description>
        <inlineHelpText>Have you been diagnosed with a movement disorder?</inlineHelpText>
        <label>HM_v1.0.21</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Have_you_been_diagnosed_with_a_stroke__c</fullName>
        <description>Have you been diagnosed with a stroke?</description>
        <inlineHelpText>Have you been diagnosed with a stroke?</inlineHelpText>
        <label>HM_v1.0.38</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Have_you_diagnosed_with_any_of_these__c</fullName>
        <description>Have you been diagnosed with any of the following? Please mark all that apply.</description>
        <inlineHelpText>Have you been diagnosed with any of the following? Please mark all that apply.</inlineHelpText>
        <label>HM_v1.0.25</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Have_you_diagnosed_with_brain_disorder__c</fullName>
        <description>Have you been diagnosed with any other disorder affecting your brain?</description>
        <inlineHelpText>Have you been diagnosed with any other disorder affecting your brain?</inlineHelpText>
        <label>HM_v1.0.39</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Have_you_diagnosed_with_mental_condition__c</fullName>
        <description>Have you been diagnosed with a condition related to your mental health?</description>
        <inlineHelpText>Have you been diagnosed with a condition related to your mental health?</inlineHelpText>
        <label>HM_v1.0.28</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Have_you_treated_for_alcohol_abuse__c</fullName>
        <description>Have you ever been treated for alcohol abuse?</description>
        <inlineHelpText>Have you ever been treated for alcohol abuse?</inlineHelpText>
        <label>HM_v1.0.46</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Have_you_used_recreational_drugs__c</fullName>
        <description>Have you ever used recreational drugs in the past, other than marijuana?</description>
        <inlineHelpText>Have you ever used recreational drugs in the past, other than marijuana?</inlineHelpText>
        <label>HM_v1.0.54</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>How_controlled_you_say_your_diabetes_is__c</fullName>
        <description>If yes: On a scale of 1 to 5, with 1 being not controlled and 5 being very well controlled,how controlled would you say your diabetes is? Please use your best judgement.</description>
        <inlineHelpText>If yes: On a scale of 1 to 5, with 1 being not controlled and 5 being very well controlled,how controlled would you say your diabetes is? Please use your best judgement.</inlineHelpText>
        <label>HM_v1.0.10</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>How_is_your_blood_pressure_controlled__c</fullName>
        <description>How is your blood pressure controlled?</description>
        <inlineHelpText>How is your blood pressure controlled?</inlineHelpText>
        <label>HM_v1.0.33</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>How_long_have_you_taken_this_medication__c</fullName>
        <description>How long have you taken this medication?</description>
        <inlineHelpText>How long have you taken this medication?</inlineHelpText>
        <label>HM_v1.0.58</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>How_many_medically_diagnosed_concussion__c</fullName>
        <description>If yes: How many medically diagnosed concussions have you had in your lifetime?</description>
        <inlineHelpText>If yes: How many medically diagnosed concussions have you had in your lifetime?</inlineHelpText>
        <label>HM_v1.0.15</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>How_many_times_you_had_loss_of_conscious__c</fullName>
        <description>If yes, how many times have you had a loss of consciousness after a head impact?</description>
        <inlineHelpText>If yes, how many times have you had a loss of consciousness after a head impact?</inlineHelpText>
        <label>HM_v1.0.13</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>How_tall_are_you__c</fullName>
        <description>How tall are you?</description>
        <inlineHelpText>How tall are you?</inlineHelpText>
        <label>HM_v1.0.1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_yes_At_what_age_your_memory_problm__c</fullName>
        <description>If yes: At what age did your memory problems begin?</description>
        <inlineHelpText>If yes: At what age did your memory problems begin?</inlineHelpText>
        <label>HM_v1.0.35</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_yes_Do_u_take_medications_to_control__c</fullName>
        <description>If yes: Do you take medications to control your cholesterol?</description>
        <inlineHelpText>If yes: Do you take medications to control your cholesterol?</inlineHelpText>
        <label>HM_v1.0.27</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_yes_Do_you_wear_a_hearing_aid__c</fullName>
        <description>If yes: Do you wear a hearing aid or have a cochlear implant?</description>
        <inlineHelpText>If yes: Do you wear a hearing aid or have a cochlear implant?</inlineHelpText>
        <label>HM_v1.0.7</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_yes_How_many_cigarettes_cigars_pipes__c</fullName>
        <description>If yes: How many cigarettes/cigars/pipes do you smoke daily?</description>
        <inlineHelpText>If yes: How many cigarettes/cigars/pipes do you smoke daily?</inlineHelpText>
        <label>HM_v1.0.48</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_yes_How_many_drinks_in_a_week__c</fullName>
        <description>If yes: How many drinks do you have in a typical week?</description>
        <inlineHelpText>If yes: How many drinks do you have in a typical week?</inlineHelpText>
        <label>HM_v1.0.45</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_yes_How_much_daily_stress__c</fullName>
        <description>If yes: Please specify. How much daily stress do you experience in your life currently? Please indicate on a scale of 1 to 5, with 1 being no stress, and 5 being a great deal of stress.</description>
        <inlineHelpText>If yes: Please specify. How much daily stress do you experience in your life currently? Please indicate on a scale of 1 to 5, with 1 being no stress, and 5 being a great deal of stress.</inlineHelpText>
        <label>HM_v1.0.41</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_yes_How_often_you_ingest_marijuana__c</fullName>
        <description>If yes:How often do you smoke/ingest marijuana in a typical week?</description>
        <inlineHelpText>If yes:How often do you smoke/ingest marijuana in a typical week?</inlineHelpText>
        <label>HM_v1.0.53</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>If_yes_Is_your_blood_pressure_control__c</fullName>
        <description>If yes: Is your blood pressure controlled?</description>
        <inlineHelpText>If yes: Is your blood pressure controlled?</inlineHelpText>
        <label>HM_v1.0.32</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_yes_Please_mark_all_mental_condition__c</fullName>
        <description>If yes: Please mark all that apply.</description>
        <inlineHelpText>If yes: Please mark all that apply.</inlineHelpText>
        <label>HM_v1.0.29</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>If_yes_Please_mark_all_that_apply__c</fullName>
        <description>If yes: Please mark all that apply.</description>
        <inlineHelpText>If yes: Please mark all that apply.</inlineHelpText>
        <label>HM_v1.0.22</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>If_yes_at_what_age_you_quit_smoking__c</fullName>
        <description>If yes: If you smoked in the past but do not smoke now, at what age did you quit smoking?</description>
        <inlineHelpText>If yes: If you smoked in the past but do not smoke now, at what age did you quit smoking?</inlineHelpText>
        <label>HM_v1.0.51</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_yes_do_you_know_identical_fraternal__c</fullName>
        <description>If yes: If so, do you know if you are identical or fraternal?</description>
        <inlineHelpText>If yes: If so, do you know if you are identical or fraternal?</inlineHelpText>
        <label>HM_v1.0.43</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Indicate_your_latest_hemoglobin_A1C_valu__c</fullName>
        <description>Please indicate your latest hemoglobin A1C value if you know it.</description>
        <inlineHelpText>Please indicate your latest hemoglobin A1C value if you know it.</inlineHelpText>
        <label>HM_v1.0.11</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_medication_prescribed_by_a_physician__c</fullName>
        <description>Is this medication prescribed by a physician?</description>
        <inlineHelpText>Is this medication prescribed by a physician?</inlineHelpText>
        <label>HM_v1.0.57</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_of_Medication__c</fullName>
        <description>Name of Medication</description>
        <inlineHelpText>Name of Medication</inlineHelpText>
        <label>HM_v1.0.55</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Please_Specify_disorder_affecting_brain__c</fullName>
        <description>If Yes, Please Specify any other disorder affecting your brain</description>
        <label>HM_v1.0.40</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reason_for_taking_the_medication__c</fullName>
        <description>Reason for taking the medication</description>
        <inlineHelpText>Reason for taking the medication</inlineHelpText>
        <label>HM_v1.0.59</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>What_is_your_current_weight__c</fullName>
        <description>What is your current weight?</description>
        <inlineHelpText>What is your current weight?</inlineHelpText>
        <label>HM_v1.0.2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>What_type_of_headaches_do_you_have__c</fullName>
        <description>If yes: What type of headaches do you have?
Please check all that apply.</description>
        <inlineHelpText>If yes: What type of headaches do you have?
Please check all that apply.</inlineHelpText>
        <label>HM_v1.0.19</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>You_diagnosed_with_malignant_cancer__c</fullName>
        <description>Have you ever been diagnosed with malignant cancer?</description>
        <inlineHelpText>Have you ever been diagnosed with malignant cancer?</inlineHelpText>
        <label>HM_v1.0.8</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>You_diagnosed_with_seizures_or_epilepsy__c</fullName>
        <description>Have you ever been diagnosed with seizures or epilepsy?</description>
        <inlineHelpText>Have you ever been diagnosed with seizures or epilepsy?</inlineHelpText>
        <label>HM_v1.0.16</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Your_headaches_were_diagnosed_by__c</fullName>
        <description>Your headaches were diagnosed by:</description>
        <inlineHelpText>Your headaches were diagnosed by:</inlineHelpText>
        <label>HM_v1.0.20</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>had_loss_of_consciousness__c</fullName>
        <description>Have you ever had a loss of consciousness after a head impact?</description>
        <inlineHelpText>Have you ever had a loss of consciousness after a head impact?</inlineHelpText>
        <label>HM_v1.0.12</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>what_type_of_seizures_you_were_diagnose__c</fullName>
        <description>If yes:Please indicate what type of seizures you were diagnosed with. Check all that apply</description>
        <inlineHelpText>If yes:Please indicate what type of seizures you were diagnosed with. Check all that apply</inlineHelpText>
        <label>HM_v1.0.17</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <label>HM</label>
    <nameField>
        <displayFormat>HM-{0000000000}</displayFormat>
        <label>HM Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>HMs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>